# ludex

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: build_and_push.yml
assets/: dashExtensions_default.js  style.css
assets/css/: style.css
assets/expedition33/: zonelevels_mapping.py
assets/expedition33/clair_skill_damage/: gustave.csv  lune.csv  maelle.csv  monoco.csv  sciel.csv  verso.csv
assets/favicon/: site.webmanifest
assets/xenosaga/: load_sqlite_database.py
games/expedition33/: calculator.py  calculator_page.py  helpers.py  skill_damage.py  zonelevels.py
games/expedition33/calculator/: README.md  callbacks.py  core.py  layout.py  logic.py  save_import.py
games/expedition33/calculator/ui/: bonus_controls.py  character_controls.py  page.py  result_views.py  setup_fields.py
games/xenosaga/: enemy_database.py
helpers/: utils.py
pages/: zonelevels.py
pages/expedition33/: zonelevels.py
pages/xenosaga/: database.py  enemy_database.py  enemy_stats.py
