[project]
name = "expedition33"
version = "0.1.0"
description = "Clair Obscure: Expedition 33 Database"
#authors = ["Test <w/e@example.com>"]
license = {text = "MIT"}

# runtime dependencies
dependencies = [
    "dash-ag-grid==33.3.3",
    "dash-bootstrap-components==2.0.4",
    "dash-mantine-components==2.6.0",
    "dash==4.0.0",
    "gunicorn==25.1.0",
    "pandas==3.0.1",
    "loguru>=0.7.3",
]
